# astrology_returns

./: .gitignore  README.md  pyproject.toml
src/astrology/: __init__.py
src/astrology/chinese/: __init__.py  bazi.py  daypillar.py  dayun.py  formatting.py  liunian.py  pillars.py  relations.py  shishen.py  solarterm.py  transit.py
src/astrology/cli/: __init__.py  bazi.py  bazi_period.py  common.py  firdaria.py  forecast.py  geo.py  horary.py  natal.py  profection.py  returns.py  synastry.py  transits.py
src/astrology/core/: __init__.py  birth.py  chart.py  ephemeris.py  geo.py  timezone.py
src/astrology/western/: __init__.py  aspects.py  dignities.py  firdaria.py  formatting.py  lots.py  profections.py  returns.py  sect.py  synastry.py  transits.py
src/astrology_returns/: __init__.py  aspects.py  chart.py  cli.py  dignities.py  formatting.py  returns.py  transits.py
