[project]
name = "astrology-returns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ace Taffy", email = "xucgphi@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "geopy>=2.4.1",
    "pyswisseph>=2.10.3.2",
    "timezonefinder>=6.5.0",
]

[project.scripts]
astro = "astrology_returns.cli:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
