[project]
name = "astrology"
version = "0.2.0"
description = "Astrology toolkit — natal charts, returns, transits & more"
readme = "README.md"
authors = [
    { name = "Ace Taffy", email = "xucgphi@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "geopy>=2.4.1",
    "pyswisseph>=2.10.3.2",
    "timezonefinder>=6.5.0",
]

[project.scripts]
astro = "astrology.cli:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
